--- a/config/300-simpledeployment.yaml
+++ b/config/300-simpledeployment.yaml
@@ -50,13 +50,37 @@ spec:
                   x-kubernetes-preserve-unknown-fields: true
                 conditions:
                   description: Conditions the latest available observations of a resource's current state.
-                  type: array
                   items:
+                    description: 'Conditions defines a readiness condition for a Knative resource. See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties'
+                    properties:
+                      lastTransitionTime:
+                        description: LastTransitionTime is the last time the condition transitioned from one status to another. We use VolatileTime in place of metav1.Time to exclude this from creating equality.Semantic differences (all other things held constant).
+                        format: date-time
+                        type: string
+                      message:
+                        description: A human readable message indicating details about the transition.
+                        type: string
+                      reason:
+                        description: The reason for the condition's last transition.
+                        type: string
+                      severity:
+                        description: Severity with which to treat failures of this type of condition. When this is not specified, it defaults to Error.
+                        type: string
+                      status:
+                        description: Status of the condition, one of True, False, Unknown.
+                        type: string
+                      type:
+                        description: Type of condition.
+                        type: string
+                    required:
+                    - status
+                    - type
                     type: object
+                  type: array
                 observedGeneration:
                   description: ObservedGeneration is the 'Generation' of the Service that was last processed by the controller.
-                  type: integer
                   format: int64
+                  type: integer
                 readyReplicas:
                   type: integer
                   format: int32
